# mcpelauncher-archive

./: CMakeLists.txt
.github/workflows/: build.yml
baron/: CMakeLists.txt
baron/src/impl/: class.cpp  (+4 more)
eglut/include/: eglut_x11.h
epoll-shim/: CMakeLists.txt
epoll-shim/src/: CMakeLists.txt  epoll.c
fake-jni/: CMakeLists.txt
fake-jni/src/: fake-jni.cpp
file-picker/: CMakeLists.txt
file-picker/src/: file_picker_zenity.cpp
file-util/src/: FileUtil.cpp
game-window/src/: joystick_manager_glfw.cpp  joystick_manager_glfw.h  window_glfw.cpp  window_glfw.h
glfw/src/: cocoa_window.m
libc-shim/: CMakeLists.txt
libc-shim/include/: libc_shim.h
libc-shim/src/: argrewrite.h  common.cpp  common.h  cstdio.cpp  ctype_data.cpp  ctype_data.h  dirent.cpp  errno.cpp  errno.h  file_misc.cpp  file_misc.h  iorewrite.cpp  iorewrite.h  network.cpp  network.h  pthreads.cpp  pthreads.h  remove_all_extends.h  stat.cpp  stat.h  sysconf.cpp
mcpelauncher-client/: CMakeLists.txt
mcpelauncher-client/src/: JNIBinding.h  OpenSLESPatch.cpp  core_patches.cpp  core_patches.h  hbui_patch.cpp  main.cpp  window_callbacks.cpp  xbox_live_game_interface.cpp  xbox_live_game_interface.h  xbox_live_helper.cpp  xbox_live_helper.h
mcpelauncher-common/src/: path_helper.cpp
mcpelauncher-core/src/: crash_handler.cpp  minecraft_utils.cpp
mcpelauncher-linker/: CMakeLists.txt
mcpelauncher-linker/include/: compat.h
mcpelauncher-webview/: CMakeLists.txt
mcpelauncher-webview/src/: main.cpp  main.h  main.qml
minecraft-symbols/: CMakeLists.txt
msa-daemon-client/: CMakeLists.txt
(+76 files in other folders)
